--- a/STARSapp/STARSapp/Base.lproj/Main.storyboard
+++ b/STARSapp/STARSapp/Base.lproj/Main.storyboard
@@ -66,6 +66,7 @@
                                 </connections>
                             </button>
                         </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -127,7 +128,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="VAi-gB-j5r" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2091.40625" y="52.734375"/>
+            <point key="canvasLocation" x="4504" y="132"/>
         </scene>
         <!--Item 3-->
         <scene sceneID="Uaz-g7-kzH">
@@ -146,7 +147,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5wM-PV-cf4" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2091" y="780"/>
+            <point key="canvasLocation" x="2091" y="647"/>
         </scene>
         <!--Item 1-->
         <scene sceneID="V09-MV-A1z">
@@ -169,7 +170,13 @@
                                 <rect key="frame" x="0.0" y="28" width="768" height="44"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <items>
-                                    <navigationItem title="Tutors" id="LYz-Eg-T51"/>
+                                    <navigationItem title="Tutors" id="LYz-Eg-T51">
+                                        <barButtonItem key="rightBarButtonItem" title="Filter" id="fL7-Bq-dHT">
+                                            <connections>
+                                                <segue destination="Nzb-UT-U2H" kind="show" id="CqA-62-Nhc"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
                                 </items>
                             </navigationBar>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="VTb-nL-wel">
@@ -193,6 +200,9 @@
                                                 </label>
                                             </subviews>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="G5u-XZ-28L" kind="show" id="4m5-Qm-5VZ"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
@@ -207,6 +217,72 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fIX-ey-4nc" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2090.625" y="-769.3359375"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="ohl-9A-QOj">
+            <objects>
+                <viewController id="G5u-XZ-28L" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="1pB-F9-Vyw"/>
+                        <viewControllerLayoutGuide type="bottom" id="eBH-in-nbu"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="8eQ-4X-Suf">
+                        <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Xg8-0X-JB2">
+                                <rect key="frame" x="0.0" y="28" width="768" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <items>
+                                    <navigationItem title="Profile" id="69B-wV-fqd">
+                                        <barButtonItem key="leftBarButtonItem" title="&lt; Tutors" id="irk-49-z9N">
+                                            <connections>
+                                                <segue destination="LXA-P2-eMK" kind="show" id="Pma-S9-QbN"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="9vy-cQ-0tH" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2891" y="-422"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="Nlj-Am-vFq">
+            <objects>
+                <viewController id="Nzb-UT-U2H" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="4cr-gt-TxE"/>
+                        <viewControllerLayoutGuide type="bottom" id="Rpg-wo-ZwX"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="k8M-bg-MMI">
+                        <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="S88-0u-SlT">
+                                <rect key="frame" x="0.0" y="28" width="768" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <items>
+                                    <navigationItem title="Filter" id="EgH-pa-wyG">
+                                        <barButtonItem key="leftBarButtonItem" title="&lt; Tutors" id="JFH-mx-V8c">
+                                            <connections>
+                                                <segue destination="LXA-P2-eMK" kind="show" id="mXE-am-dc6"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="aY4-oI-Bhx" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2891" y="-1366"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="2rc-Wp-NDs">
@@ -225,10 +301,13 @@
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="izI-Ul-D2F" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="907" y="133"/>
+            <point key="canvasLocation" x="1397" y="113"/>
         </scene>
     </scenes>
     <resources>
         <image name="IMG_1823.png" width="294" height="278"/>
     </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="Pma-S9-QbN"/>
+    </inferredMetricsTieBreakers>
 </document>
