--- a/STARSapp/STARSapp/Base.lproj/Main.storyboard
+++ b/STARSapp/STARSapp/Base.lproj/Main.storyboard
@@ -71,7 +71,24 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="137.5" y="136.5234375"/>
+            <point key="canvasLocation" x="-72" y="-550"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="BT9-rz-zt0">
+            <objects>
+                <navigationController id="HET-cB-yMP" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="6FW-8I-1z1"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="gh2-rg-yLH">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="ZGE-bH-GvJ" kind="relationship" relationship="rootViewController" id="ChR-iy-Rkz"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="hUo-mI-yDK" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="691" y="224"/>
         </scene>
         <!--Item 2-->
         <scene sceneID="nzR-W2-coF">
@@ -128,26 +145,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="VAi-gB-j5r" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4504" y="132"/>
-        </scene>
-        <!--Item 3-->
-        <scene sceneID="Uaz-g7-kzH">
-            <objects>
-                <viewController id="to2-nk-MQZ" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="qRA-rg-y7x"/>
-                        <viewControllerLayoutGuide type="bottom" id="D0J-z1-rpJ"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="Lla-aa-x6P">
-                        <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                    <tabBarItem key="tabBarItem" title="Item 3" id="quz-ve-k5n"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="5wM-PV-cf4" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="2091" y="647"/>
+            <point key="canvasLocation" x="-73" y="1009"/>
         </scene>
         <!--Item 1-->
         <scene sceneID="V09-MV-A1z">
@@ -166,19 +164,6 @@
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <textInputTraits key="textInputTraits"/>
                             </searchBar>
-                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2qa-aJ-86L">
-                                <rect key="frame" x="0.0" y="28" width="768" height="44"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                                <items>
-                                    <navigationItem title="Tutors" id="LYz-Eg-T51">
-                                        <barButtonItem key="rightBarButtonItem" title="Filter" id="fL7-Bq-dHT">
-                                            <connections>
-                                                <segue destination="Nzb-UT-U2H" kind="show" id="CqA-62-Nhc"/>
-                                            </connections>
-                                        </barButtonItem>
-                                    </navigationItem>
-                                </items>
-                            </navigationBar>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="VTb-nL-wel">
                                 <rect key="frame" x="20" y="173" width="728" height="802"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -210,18 +195,25 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Item 1" id="XJV-4x-bWb"/>
+                    <navigationItem key="navigationItem" id="b7q-kL-v5S">
+                        <barButtonItem key="rightBarButtonItem" title="Filter" id="fL7-Bq-dHT">
+                            <connections>
+                                <segue destination="Nzb-UT-U2H" kind="show" id="CqA-62-Nhc"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="tutorTable" destination="VTb-nL-wel" id="3BL-9C-C4y"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fIX-ey-4nc" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2090.625" y="-769.3359375"/>
+            <point key="canvasLocation" x="1462" y="224"/>
         </scene>
-        <!--View Controller-->
+        <!--Details View-->
         <scene sceneID="ohl-9A-QOj">
             <objects>
-                <viewController id="G5u-XZ-28L" sceneMemberID="viewController">
+                <viewController title="Details View" id="G5u-XZ-28L" userLabel="Details View" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="1pB-F9-Vyw"/>
                         <viewControllerLayoutGuide type="bottom" id="eBH-in-nbu"/>
@@ -229,32 +221,17 @@
                     <view key="view" contentMode="scaleToFill" id="8eQ-4X-Suf">
                         <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Xg8-0X-JB2">
-                                <rect key="frame" x="0.0" y="28" width="768" height="44"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                                <items>
-                                    <navigationItem title="Profile" id="69B-wV-fqd">
-                                        <barButtonItem key="leftBarButtonItem" title="&lt; Tutors" id="irk-49-z9N">
-                                            <connections>
-                                                <segue destination="LXA-P2-eMK" kind="show" id="Pma-S9-QbN"/>
-                                            </connections>
-                                        </barButtonItem>
-                                    </navigationItem>
-                                </items>
-                            </navigationBar>
-                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9vy-cQ-0tH" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2891" y="-422"/>
+            <point key="canvasLocation" x="2383" y="240"/>
         </scene>
-        <!--View Controller-->
+        <!--Filter View-->
         <scene sceneID="Nlj-Am-vFq">
             <objects>
-                <viewController id="Nzb-UT-U2H" sceneMemberID="viewController">
+                <viewController title="FIlter View" id="Nzb-UT-U2H" userLabel="Filter View" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="4cr-gt-TxE"/>
                         <viewControllerLayoutGuide type="bottom" id="Rpg-wo-ZwX"/>
@@ -262,52 +239,33 @@
                     <view key="view" contentMode="scaleToFill" id="k8M-bg-MMI">
                         <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="S88-0u-SlT">
-                                <rect key="frame" x="0.0" y="28" width="768" height="44"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                                <items>
-                                    <navigationItem title="Filter" id="EgH-pa-wyG">
-                                        <barButtonItem key="leftBarButtonItem" title="&lt; Tutors" id="JFH-mx-V8c">
-                                            <connections>
-                                                <segue destination="LXA-P2-eMK" kind="show" id="mXE-am-dc6"/>
-                                            </connections>
-                                        </barButtonItem>
-                                    </navigationItem>
-                                </items>
-                            </navigationBar>
-                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aY4-oI-Bhx" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2891" y="-1366"/>
+            <point key="canvasLocation" x="2383" y="-420"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="2rc-Wp-NDs">
             <objects>
-                <tabBarController id="LXA-P2-eMK" sceneMemberID="viewController">
+                <tabBarController modalTransitionStyle="flipHorizontal" id="LXA-P2-eMK" sceneMemberID="viewController">
                     <tabBar key="tabBar" contentMode="scaleToFill" id="kCb-SY-o2i">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </tabBar>
                     <connections>
-                        <segue destination="ZGE-bH-GvJ" kind="relationship" relationship="viewControllers" id="hI5-Zd-4eK"/>
-                        <segue destination="4RK-2r-Wdu" kind="relationship" relationship="viewControllers" id="YXk-Tm-GVe"/>
-                        <segue destination="to2-nk-MQZ" kind="relationship" relationship="viewControllers" id="Pe4-rz-ynV"/>
+                        <segue destination="HET-cB-yMP" kind="relationship" relationship="viewControllers" id="fzh-KP-sK9"/>
+                        <segue destination="4RK-2r-Wdu" kind="relationship" relationship="viewControllers" id="F2U-uh-wH4"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="izI-Ul-D2F" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1397" y="113"/>
+            <point key="canvasLocation" x="-73" y="224"/>
         </scene>
     </scenes>
     <resources>
         <image name="IMG_1823.png" width="294" height="278"/>
     </resources>
-    <inferredMetricsTieBreakers>
-        <segue reference="4LS-3K-Etc"/>
-    </inferredMetricsTieBreakers>
 </document>
